--- a/src/main/webapp/pages/paciente/lista.xhtml
+++ b/src/main/webapp/pages/paciente/lista.xhtml
@@ -66,7 +66,7 @@
             </div>
 
             <!--tabla de datos-->
-            <p:dataTable id="tablaPacientes"  var="paciente_" value="#{pacienteListaServicio.resultList}"
+            <p:dataTable id="tablaPacientes"  var="paciente_" value="#{pacienteListaServicio}"
                          paginator="true" rows="10" styleClass="span18"
                          paginatorAlwaysVisible="false"
                          paginatorPosition="top"
