modulo de medicina parte 1

--- a/src/main/webapp/pages/admin/bussinesentitytype/bussinesentitytype.xhtml
+++ b/src/main/webapp/pages/admin/bussinesentitytype/bussinesentitytype.xhtml
@@ -193,7 +193,7 @@ limitations under the License.
                         </p:column>
 
                         <p:column headerText="#{messages['common.property.label']}" sortBy="#{property.label}">
-                            <h:outputText value="#{property.label}" />
+                            <h:outputText value="#{property.label}" styleClass="span4"/>
                         </p:column>                        
                         <p:column headerText="#{messages['common.property.type']}" sortBy="#{property.type}">
                             <h:outputText value="#{property.type}" />
