modulo de medicina parte 1.3 y  rectificacion de fichamedica

--- a/src/main/webapp/pages/admin/bussinesentitytype/list.xhtml
+++ b/src/main/webapp/pages/admin/bussinesentitytype/list.xhtml
@@ -61,10 +61,9 @@ limitations under the License.
                 </h:link>
             </div>           
             <p:dataTable var="bussinesEntityType" value="#{bussinesEntityTypeListService}"
-                         paginator="true" rows="10"
-                         paginatorAlwaysVisible="false"
+                         paginator="true" rows="15"                         
                          paginatorPosition="top"
-                         paginatorTemplate="{CurrentPageReport} {PreviousPageLink} {NextPageLink}"
+                         paginatorTemplate="{CurrentPageReport} {PreviousPageLink} {NextPageLink} {RowsPerPageDropdown} {FirstPageLink} {LastPageLink}"
                          rowsPerPageTemplate="5,10,15"
                          id="bussinesEntityTypeTable" lazy="true"                          
                          selection="#{bussinesEntityTypeListService.selectedBussinesEntityType}"
